--- a/styles.css
+++ b/styles.css
@@ -69,7 +69,7 @@ h1{
   
   blockquote{
     max-width: 500px;
-    margin: 50px 0 50px 60px;
+    margin: 50px auto 50px auto; /* added to make sure the text fits as the window is resized */
     font-family: 'Irish Grover', cursive;
   }
   
